--- a/style.css
+++ b/style.css
@@ -1,3 +1,74 @@
 #root {
-  color: red;
+  background-color: rgb(209, 206, 180);
+}
+
+/* search section on header */
+header {
+  display: flex;
+}
+h4 {
+  margin: 1em;
+}
+input {
+  margin: 1em;
+}
+
+/* main section */
+section {
+  background-color: white;
+  width: 30%;
+  margin: 1em;
+}
+main {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+h1 {
+  display: block;
+  justify-content: center;
+  color: black;
+  border: 2px solid black;
+  border-radius: 10px;
+  margin: 0.1em;
+  padding: 1em 0;
+  text-align: center;
+}
+a {
+  text-decoration: none;
+  cursor: pointer;
+  color: black;
+}
+
+img {
+  display: block;
+  margin: auto;
+  padding-top: 2em;
+}
+.description {
+  display: flex;
+  justify-content: center;
+  margin: 1em;
+  font-size: 20px;
+  line-height: 1.5em;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+/* screen sizes */
+@media only screen and (max-width: 600px) {
+  section {
+    width: 90%;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  section {
+    width: 45%;
+  }
+}
+
+@media only screen and (min-width: 922px) {
+  section {
+    width: 30%;
+  }
 }
