--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ section {
   background-color: white;
   width: 30%;
   margin: 1em;
+  box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
 }
 main {
   display: flex;
@@ -28,16 +30,20 @@ h1 {
   display: block;
   justify-content: center;
   color: black;
-  border: 2px solid black;
   border-radius: 10px;
-  margin: 0.1em;
+  margin: 0;
   padding: 1em 0;
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.5);
 }
 a {
   text-decoration: none;
   cursor: pointer;
-  color: black;
+}
+h1:hover {
+  background-color: rgba(224, 231, 222, 0.698);
+  transition: 0.4s;
 }
 
 img {
