--- a/style.css
+++ b/style.css
@@ -7,12 +7,9 @@ header {
   display: flex;
   align-items: center;
 }
-h4 {
-  margin: 1em;
-}
+
 input {
-  margin: 1em;
-  height: 2.5em;
+  /* height: 2.5em; */
   border: 2px solid black;
 }
 label {
@@ -41,7 +38,7 @@ main {
   flex-wrap: wrap;
   flex-direction: row;
 }
-h1 {
+h3 {
   display: block;
   justify-content: center;
   color: black;
@@ -56,7 +53,7 @@ a {
   text-decoration: none;
   cursor: pointer;
 }
-h1:hover {
+h3:hover {
   background-color: rgba(224, 231, 222, 0.698);
   transition: 0.4s;
 }
@@ -65,6 +62,11 @@ img {
   display: block;
   margin: auto;
   padding-top: 2em;
+  transition: 0.4s;
+}
+img:hover {
+  transform: scale(1.07);
+  transition: 0.4s;
 }
 p {
   display: flex;
