--- a/style.css
+++ b/style.css
@@ -34,9 +34,12 @@ section {
   border-radius: 10px;
 }
 main {
+  box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.5);
+
+  background-color: rgba(201, 202, 195, 0.698);
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
+  justify-content: center;
 }
 h3 {
   display: block;
@@ -69,18 +72,39 @@ img:hover {
   transition: 0.4s;
 }
 p {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
   margin: 1em;
   font-size: 20px;
   line-height: 1.5em;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+.rating {
+  background-color: white;
+  margin: 1em;
+  box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+}
+
 /* screen sizes */
 @media only screen and (max-width: 600px) {
   section {
     width: 90%;
+  }
+  .summary {
+    display: none;
+  }
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .select-show {
+    width: 80%;
+  }
+  .select-episode {
+    width: 80%;
   }
 }
 
